# helfertool

./: Dockerfile  default.nix  flake.nix  hello.nix  lock.x86_64-linux.json  pyproject.toml  result
.github/workflows/: docker-publish.yml
src/: result
src/env/: lock.toml  requirements.txt
src/helfertool/: __init__.py  celery.py  oidc.py  settings.py
src/registration/forms/: registration.py
src/registration/migrations/: 0063_alter_event_url_name.py  0063_helper_user_id.py  0064_alter_helper_id.py  0065_alter_event_url_name_alter_job_job_admins.py
src/registration/views/: registration.py
