[tool.black]
line-length = 120
target-version = ["py39"]
[project]
name = "helfertool"
version = "1"
dependencies = [
      "django==3.2.*",
      "celery<5.0.0",
      "vine<5.0.0", # added due to celery
      "amqp<5.0.0", # pinned due to celery

      # packages pinned to compatible version
      "django_compressor~=4.1",
      "django_ical~=1.8",
      "django_select2~=7.10",
      "django-axes~=5.39",
      "django-bleach~=3.0",
      "django-bootstrap5~=22.1",
      "django-ckeditor~=6.5",
      "django-countries~=7.3",
      "django-icons~=22.1",
      "django-libsass~=0.9",
      "django-modeltranslation~=0.18",
      "django-multiselectfield~=0.1",
      "csscompressor~=0.9",
      "jmespath~=1.0",
      "mozilla-django-oidc~=2.0",
      "pillow~=9.2",
      "python-dateutil~=2.8",
      "python-magic~=0.4",
      "pyyaml~=6.0",
      "reportlab~=3.6",
      "xlsxwriter~=3.0"
]

[project.scripts]
"helfertool" = "helfertool:django_manage"
